Refactor: 오타제거 및 메서드 정리